Custom element registration

--- a/test.html
+++ b/test.html
@@ -8,14 +8,15 @@
     <hello-world>
       <h1>Heyo</h1>
     </hello-world>
-    <second></second>
+    <second-war></second-war>
     <script type="module">
+      // import { Root } from "./root.js";
       import { Joints } from "./main.js";
       const container = new Joints({
         url: 'http://joints.local/components/'
       });
       container.newJoint('hello-world', 1, true);
-      container.newJoint('second', 2, true);
+      container.newJoint('second-war', 2, true);
       container.load();
     </script>
   </body>
