Events and executables

--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
       <h1>Heyo</h1>
     </hello-world>
     <script type="module">
-      // import { Root } from "./root.js";
+      import { RootJoint } from "./root.js";
       import { Joints } from "./main.js";
       const container = new Joints({
         url: 'http://joints.local/components/'
