Small rendering fixes and adding injected html at the end of node

--- a/test.html
+++ b/test.html
@@ -8,6 +8,9 @@
     <hello-world>
       <h1>Heyo</h1>
     </hello-world>
+    <second-war>
+      aaa
+    </second-war>
     <script type="module">
       import { RootJoint } from "./root.js";
       import { Joints } from "./main.js";
