Persistence and passing variables

--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
       import { RootJoint } from "./root.js";
       import { Joints } from "./main.js";
       const container = new Joints({
-        url: 'http://joints.local/components/'
+        url: 'http://jmonkey.local/components/'
       });
       container.register('hello-world', 1, true);
       container.register('second-war', 2, true);
