Name change and proper two way binding

--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
     </second-war>
     <script src="./merged.js" charset="utf-8"></script>
     <script type="text/javascript">
-       (async () => {const container = new Joints({
+       (async () => {const container = new JMonkey({
         url: 'http://jmonkey.local/components/'
       });
       container.register('hello-world', 1, true);
