--- a/test.html
+++ b/test.html
@@ -12,23 +12,15 @@
       aaa
     </second-war>
     <script src="./merged.js" charset="utf-8"></script>
-    <script type="text/javascript">
-       (async () => {const container = new JMonkey({
+    <script type="module">
+      import { JMonkey } from "./main.js";
+      const container = new JMonkey({
         url: 'http://jmonkey.local/components/'
       });
-      container.register('hello-world', 1, true);
-      container.register('second-war', 2, true);
-      await container.load();})()
-    </script>
-    <script type="module">
-      // import { RootJoint } from "./root.js";
-      // import { Joints } from "./main.js";
-      // const container = new Joints({
-      //   url: 'http://jmonkey.local/components/'
-      // });
-      // container.register('hello-world', 1, true);
-      // container.register('second-war', 2, true);
-      // await container.load();
+      container.register('hello-world', 1, '', true);
+      container.register('second-war', 2, '', true);
+      container.register('second-bind', 1, '', true);
+      await container.load();
     </script>
   </body>
 </html>
