--- a/test.html
+++ b/test.html
@@ -13,16 +13,19 @@
     <second-war>
       aaa
     </second-war>
+    <third-check></third-check>
     <script src="./merged.js" charset="utf-8"></script>
     <script type="module">
       import { JMonkeyElement } from "./root.js";
       import { JMonkey } from "./main.js";
       const container = new JMonkey({
-        url: 'http://jmonkey.local/components/'
+        url: 'http://jmonkey.local/components/',
+        localStorage: true
       });
-      container.register('hello-world', 7, '', true);
-      container.register('second-war', 3, '', true);
-      container.register('second-bind', 6, '', true);
+      container.register('hello-world', 6, '');
+      container.register('second-war', 4, '');
+      container.register('second-bind', 2, '');
+      container.register('third-check', 1);
       await container.load();
     </script>
   </body>
