Default attributes bind

--- a/test.html
+++ b/test.html
@@ -19,7 +19,7 @@
       import { JMonkeyElement } from "./root.js";
       import { JMonkey } from "./main.js";
       const container = new JMonkey({
-        url: 'http://jmonkey.local/components/',
+        url: 'http://jsmonkey.local/components/',
         localStorage: false
       });
       container.register('hello-world', 6);
