--- a/test.html
+++ b/test.html
@@ -16,9 +16,9 @@
     <third-check></third-check>
     <script src="./merged.js" charset="utf-8"></script>
     <script type="module">
-      import { JMonkeyElement } from "./root.js";
-      import { JMonkey } from "./main.js";
-      const container = new JMonkey({
+      import { DitoElement } from "./root.js";
+      import { Dito } from "./main.js";
+      const container = new Dito({
         url: 'http://jsmonkey.local/components/',
         localStorage: false
       });
