--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <hello-world>
 
-      Hello {planet}
+      Hello {planet + '2'}
 
     </hello-world>
     <script src='./snugssi.min.js'></script>
