--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@
       import { Dito } from "./main.js";
       const container = new Dito({
         url: 'http://jsmonkey.local/components/',
-        localStorage: false
+        localStorage: true
       });
       container.register('hello-world', 6);
       container.register('second-war', 4);
