New features and fix downloading after load

--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
     <title>Joint test</title>
   </head>
   <body>
-    <third-check></third-check>
+    <second-bind></second-bind>
     <script type="module">
       import { DitoElement } from "./root.js";
       import { Dito } from "./main.js";
@@ -16,7 +16,7 @@
       container.register('hello-world', 6);
       container.register('second-war', 4);
       container.register('second-bind', 3);
-      container.register('third-check', 1);
+      container.register('third-check', 2);
       await container.load();
     </script>
   </body>
