Bind and for tests

--- a/tests/integration/end.html
+++ b/tests/integration/end.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>All is well that end well</title>
+    <title>All is well that ends well</title>
     <style media="screen">
       body {
         background-color: black;
