Min, name change and readme

--- a/tests/index.html
+++ b/tests/index.html
@@ -13,8 +13,8 @@
       }
     </script>
     <script type="module">
-      import { DitoElement } from "../../root.js";
-      import { Dito } from "../../main.js";
+      import { DitoElement } from "../../ditoelement.js";
+      import { Dito } from "../../dito.js";
       const tests = {};
       const success = 'SUCCESS';
       const failure = 'FAILURE';
