--- a/tests/integration/events.html
+++ b/tests/integration/events.html
@@ -44,8 +44,8 @@
             && events.$.event?.target == mouseover
             && events.$.event?.type == 'mouseover'
             ? TH.success : TH.failure;
-          console.table(TH.tests);
-          // TH.validateTestAndMoveToNext();
+
+          TH.validateTestAndMoveToNext();
         }
       });
       container.register('test-empty', Math.random());
