--- a/tests/integration/for_min.html
+++ b/tests/integration/for_min.html
@@ -17,9 +17,8 @@
         TH.tests['Min amount of items is 10'] = min.children.length === 10 ? TH.success : TH.failure;
         TH.tests['Min item was displayed 5 times'] =
           min.innerText.split('min').length - 1 == 5 ? TH.success : TH.failure;
-        // TH.validateTestAndMoveToNext();
+        TH.validateTestAndMoveToNext();
       };
-
     </script>
   </body>
 </html>
