--- a/tests/integration/injected.html
+++ b/tests/integration/injected.html
@@ -17,6 +17,7 @@
           const pack1 = inject.querySelector('test-inject-pack1');
           const pack2 = inject.querySelector('test-inject-pack2');
           const pack3 = inject.querySelector('test-inject-pack3');
+          const pack4 = inject.querySelector('test-inject-pack4');
 
           TH.tests['HTML was not injected in empty'] = TH.failure;
           if (empty.innerText.indexOf('Should not be rendered') === -1) {
@@ -28,6 +29,11 @@
             TH.tests['HTML was injected into injected'] = TH.success;
           }
 
+          TH.tests['Injected component was downloaded'] = TH.failure;
+          if (pack4.querySelector('.pack4')) {
+            TH.tests['Injected component was downloaded'] = TH.success;
+          }
+
           [pack1, pack2].forEach((pack, i) => {
             TH.tests['HTML was compiled and injected into pack' + i] = TH.failure;
             const titleInvisible = pack.querySelector('[name="titleInvisible"]');
@@ -36,13 +42,6 @@
             const visible = pack.querySelector('[name="visible"]');
             const hidden = pack.querySelector('[name="hidden"]');
             const twice = pack.querySelectorAll('[name="twice"]');
-            // console.log('titleInvisible', titleInvisible)
-            // console.log('titleVisible', titleVisible)
-            // console.log('subTitleVisible', subTitleVisible)
-            // console.log('visible', visible)
-            // console.log('hidden', hidden)
-            // console.log('twice', twice)
-            // console.log("================")
             if (!titleInvisible && titleVisible && subTitleVisible && visible && !hidden && twice.length == 2) {
               TH.tests['HTML was compiled and injected into pack' + i] = TH.success;
             }
@@ -71,6 +70,7 @@
       container.register('test-inject-pack1', Math.random(), 'test-inject/');
       container.register('test-inject-pack2', Math.random(), 'test-inject/');
       container.register('test-inject-pack3', Math.random(), 'test-inject/');
+      container.register('test-inject-pack4', Math.random(), 'test-inject/');
       await container.load();
 
     </script>
