Fix injecting injection

--- a/tests/integration/injected.html
+++ b/tests/integration/injected.html
@@ -65,7 +65,7 @@
           TH.tests['Pack 3 test after change was properly rendered'] = pack3Ren.innerText.trim() === inject.$.test + ' test'
             ? TH.success : TH.failure;
           TH.tests['Pack 4 is bound properly'] = pack4.$.bind === inject.$.bind ? TH.success : TH.failure;
-          // TH.validateTestAndMoveToNext();
+          TH.validateTestAndMoveToNext();
         }
       });
       container.register('test-empty', Math.random());
