Fix emit not returning the result

--- a/tests/index.html
+++ b/tests/index.html
@@ -12,8 +12,8 @@
       }
     </script>
     <script type="module">
-      import { DitoElement } from "../../ditoelement.js";
-      import { Dito } from "../../dito.js";
+      import { DitoElement } from "../src/ditoelement.js";
+      import { Dito } from "../src/dito.js";
       const tests = {};
       const success = 'SUCCESS';
       const failure = 'FAILURE';
